--- a/FoodManager/src/main/resources/application.properties
+++ b/FoodManager/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+jwt.key=chiavesegreta123chiavesegreta123 
+jwt.expirationMs=864000000
