aggiustamenti package security

--- a/FoodManager/src/main/resources/application.properties
+++ b/FoodManager/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/foodmanager
 spring.datasource.username=postgres
 spring.datasource.password=F99L04D64b71
 spring.jpa.properties.hibernate.default_schema=public
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
