--- a/FoodManager/src/main/resources/application.properties
+++ b/FoodManager/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 jwt.key=chiavesegreta123chiavesegreta123 
 jwt.expirationMs=864000000
+
+cloudinary.cloud_name=dxlaxjpii
+cloudinary.api_key=446291544953886
+cloudinary.api_secret=f_q7vNHasRskb3MWPPB80yBTucQ
+cloudinary.url=cloudinary://446291544953886:f_q7vNHasRskb3MWPPB80yBTucQ@dxlaxjpii
