email ok. da aggiungere controlli

--- a/FoodManager/src/main/resources/application.properties
+++ b/FoodManager/src/main/resources/application.properties
@@ -15,3 +15,4 @@ cloudinary.cloud_name=dxlaxjpii
 cloudinary.api_key=446291544953886
 cloudinary.api_secret=f_q7vNHasRskb3MWPPB80yBTucQ
 cloudinary.url=cloudinary://446291544953886:f_q7vNHasRskb3MWPPB80yBTucQ@dxlaxjpii
+spring.config.import=file:env.properties
