email ok. da aggiungere controlli e fix git guardian

--- a/FoodManager/src/main/resources/application.properties
+++ b/FoodManager/src/main/resources/application.properties
@@ -15,4 +15,12 @@ cloudinary.cloud_name=dxlaxjpii
 cloudinary.api_key=446291544953886
 cloudinary.api_secret=f_q7vNHasRskb3MWPPB80yBTucQ
 cloudinary.url=cloudinary://446291544953886:f_q7vNHasRskb3MWPPB80yBTucQ@dxlaxjpii
-spring.config.import=file:env.properties
+gmail.mail.transport.protocol=smtp
+gmail.mail.smtp.auth=true
+gmail.mail.smtp.starttls.enable=true
+gmail.mail.debug=true
+gmail.mail.from=fede99ita26@gmail.com
+gmail.mail.from.password=eskk gxud qqdj ygne
+gmail.smtp.ssl.enable=true
+gmail.smtp.host=smtp.gmail.com
+gmail.smtp.port=587
