--- a/FoodManager/src/main/resources/application.properties
+++ b/FoodManager/src/main/resources/application.properties
@@ -24,3 +24,4 @@ gmail.mail.from.password=eskk gxud qqdj ygne
 gmail.smtp.ssl.enable=true
 gmail.smtp.host=smtp.gmail.com
 gmail.smtp.port=587
+python.service.url=http://127.0.0.1:5000
